Fixing Crash bug 53258 - crash with inline image viewing - r: sspitzer - PDT approval